# hypr-monitor-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  events.rs  lib.rs  main.rs
src/config/: mod.rs  profiles.rs  settings.rs
src/hyprland/: config.rs  ipc.rs  mod.rs  monitor.rs
src/ui/: dialogs.rs  help.rs  layout.rs  mod.rs  monitor_grid.rs  preview.rs  settings_panel.rs  widgets.rs
tests/: config_generation.rs  monitor_parsing.rs  position_calculation.rs
